# unblending

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.Commercial  LICENSE.LGPLv3  LayerInfos.md  README.md
.github/workflows/: macos.yml  ubuntu.yml
examples/: README.md  cezanne.json  electron.json  magic.json
resources/: Info.plist.in
unblending/: CMakeLists.txt
unblending-cli/: CMakeLists.txt  main.cpp
unblending-gui/: CMakeLists.txt  core.cpp  core.h  imagewidget.cpp  imagewidget.h  layercolormodelwidget.cpp  layercolormodelwidget.h  layerimagewidget.cpp  layerimagewidget.h  layerwidget.cpp  layerwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
unblending/include/unblending/: blend_mode.hpp  color_model.hpp  common.hpp  comp_op.hpp  equations.hpp  image_processing.hpp  layer_info.hpp  unblending.hpp
unblending/src/: color_model.cpp  equations.cpp  image_processing.cpp  unblending.cpp  unblending_io.cpp
